app/src/main/java/com/example/jokeapp/domain/Errors/NoCachedJokes.kt
package com.example.jokeapp.domain.Errors

class NoCachedJokes : BaseJokeFailure() {
    override fun getMessage(): String {
        TODO("Not yet implemented")
    }
}